crates/solidity/testing/snapshots/bindings_output/using/for_fixed_arrays/generated/0.7.1-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or FunctionKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
   ╭─[ input.sol:5:1 ]
   │
 5 │ ╭─▶ using ArrayHelper for string[1];
   ┆ ┆   
 9 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ library ArrayHelper {
   │         ─────┬─────  
   │              ╰─────── name: 1
 2 │     function asArray(string[1] memory items) internal {}
   │              ───┬───                  ──┬──  
   │                 ╰──────────────────────────── name: 2
   │                                         │    
   │                                         ╰──── name: 3
───╯
[39mDefiniens:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ ╭─▶ library ArrayHelper {
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
   │
   ├─[ input.sol:1:1 ]
   │
 2 │     function asArray(string[1] memory items) internal {}
   │ ────────────────────────────┬───┬────────────────────────  
   │                             ╰────────────────────────────── definiens: 2
   │                                 │                          
   │                                 ╰────────────────────────── definiens: 3
───╯
